--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onload="init()">
 <div id="main">
     <div id="title">
-        <h1>Enigma - Visualisierung (Javascript Projekt SS´21)</h1>
+        <h1>Enigma - Visualisierung (Javascript Projekt SS´21) UpdatedWebhook</h1>
     </div>
 
     <div id="walzen_view">
